fix: password show button alignment

--- a/components/input-password/input-password.component.scss
+++ b/components/input-password/input-password.component.scss
@@ -14,6 +14,9 @@
   .eye{
     color: $textLight;
   }
+  :host & ::ng-deep .mat-form-field-suffix {
+    align-self: center; // fix alignment on Firefox
+  }
   .password-strength{
     &.weak{
       color: $warning;
